syntax = "proto3";

option go_package = "github.com/code-cell/esive/grpc";

package grpc;

service Esive {
  rpc MoveUp(MoveUpReq) returns (MoveUpRes) {}
  rpc MoveDown(MoveDownReq) returns (MoveDownRes) {}
  rpc MoveLeft(MoveLeftReq) returns (MoveLeftRes) {}
  rpc MoveRight(MoveRightReq) returns (MoveRightRes) {}
  rpc Build(BuildReq) returns (BuildRes) {}
  rpc VisibilityUpdates(VisibilityUpdatesReq) returns (stream VisibilityUpdatesRes) {}
  rpc ChatUpdates(ChatUpdatesReq) returns (stream ChatUpdatesRes) {}
  rpc Say(SayReq) returns (SayRes) {}
  rpc Join(JoinReq) returns (JoinRes) {}
}

message VisibilityUpdatesReq {}
message VisibilityUpdatesRes {
  enum Action {
    ADD = 0;
    REMOVE = 1;
  }

  Renderable renderable = 1;
  Action action = 2;
}

message ChatUpdatesReq {}
message ChatUpdatesRes {
  ChatMessage message = 1;
}

message MoveUpReq {}
message MoveUpRes {
  Position position = 1;
}
message MoveDownReq {}
message MoveDownRes {
  Position position = 1;
}
message MoveLeftReq {}
message MoveLeftRes {
  Position position = 1;
}
message MoveRightReq {}
message MoveRightRes {
  Position position = 1;
}
message BuildReq {}
message BuildRes {
  Position position = 1;
}
message JoinReq {
  string name = 1;
}
message JoinRes {
  int64 player_id = 1;
}
message SayReq {
  string text = 1;
}
message SayRes {}

message Renderable {
  int64 id = 1;
  Position position = 2;
  string char = 3;
  int32 color = 4;
}

message ChatMessage {
  string from = 1;
  string text = 2;
}

message Position {
  int64 x = 1;
  int64 y = 2;
}
